# cleanCppProject

doc/: directoryStructure.md  start_working.md
doc/doxygen/: Doxyfile.in
packaging/: CMakeLists.txt
source/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
